--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-#######################
-### FILES & FOLDERS ###
-#######################
+############
+### 2026 ###
+############
 
-# 2026 #
+# HW 1 #
 
-# keys
+# 2nd half of season
 2026/hw1/2h.csv
+2026/hw1/full-season.csv
+
+# answer key
 2026/hw1/complete.csv
+
